--- a/frontend/src/components/About/about.css
+++ b/frontend/src/components/About/about.css
@@ -2,3 +2,12 @@
     font-size: 18px;
     line-height: 34px;
 }
+.about-link{
+    color: #255674;
+    text-decoration: underline;
+}
+
+.about-staffHeader{
+    font-size: 22px;
+    font-weight: 500;
+}
