--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -32,9 +32,11 @@
     align-items: center;
     color: black;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    transition: transform 0.4s;
 
     &:hover{
         background-color: #255674;
+        transform: scale(1.04);
         color: white;
     }
 }
