Adding Responsiveness and Background Image

--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -60,6 +60,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .navbar-links{
