--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -5,6 +5,10 @@
     padding: 100px 160px;
     box-sizing: border-box;
     gap: 100px;
+    background: url("https://res.cloudinary.com/mashhuudanny/image/upload/v1739627781/loginLogo_vxibhy.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .login-page-card{
@@ -12,6 +16,7 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     padding: 30px;
     height: fit-content;
+    box-sizing: border-box;
     background-color: white;
 
 }
@@ -51,9 +56,10 @@
 }
 
 .signup-page-card{
-    width: 30%;
+    width: 40%;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     padding: 30px;
+    box-sizing: border-box;
     background-color: white;
 }
 .forgot-password-link{
@@ -63,7 +69,10 @@
 
 @media screen and (max-width:1024px) {
     .login-page{
-        flex-direction: column; 
+        flex-direction: column;
+        align-items: center; 
+        padding: 40px 10px ;
+
     }
     .login-page-card{
         width: 90%;
@@ -74,7 +83,7 @@
 }
 @media screen and (max-width:480px) {
     .login-page{
-        padding: 20px ;
+        padding: 40px 10px ;
     }
     
 }
