Added multiple pages

--- a/frontend/src/pages/AdminPages/AdminHome/adminDashboard.css
+++ b/frontend/src/pages/AdminPages/AdminHome/adminDashboard.css
@@ -1,7 +1,7 @@
 .adminDashboard{
     width: 100%;
     box-sizing: border-box;
-    padding: 60px 100px;
+    padding: 60px 100px 100px 100px;
     background-color: whitesmoke;
 }
 .admin-dashboard-cards{
@@ -15,7 +15,7 @@
 }
 
 .admin-dashboard-card{
-    padding: 80px;
+    padding: 80px 50px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     background-color: #255674;
     color: white;
@@ -24,6 +24,7 @@
     align-items: center;
     font-size: 24px;
     cursor: pointer;
+    text-decoration: none;
     transition: transform 1s;
     border-radius: 4px;
 }
