--- a/frontend/src/components/Report/reportModal.css
+++ b/frontend/src/components/Report/reportModal.css
@@ -94,6 +94,8 @@
 
 .report-form-row{
     display: flex;
+    align-items: center;
+    margin-bottom: 10px;
     justify-content: space-between;
 }
 
@@ -104,7 +106,13 @@
         color: red;
     }
 }
-
+.edit-icon{
+    color: #255674;
+    cursor: pointer;
+    &:hover{
+        color: rgb(227, 227, 11);
+    }
+}
 .modal-submit{
     font-size: 18px;
     padding: 10px;
@@ -114,6 +122,47 @@
     cursor: pointer;
     width: fit-content;
     border-radius: 5px;
+    &:hover{
+        background-color: #2c98dc;
+    }
+}
+
+.input-table{
+    /* padding: 10px 0 10px 10px; */
+    box-sizing: border-box;
+    font-size: 20px;
+    width: 60px;
+    height: 30px;
+}
+
+.col-1-rm{
+    width: 160px;
+}
+
+.col-2-rm{
+    width:140px;
+}
+
+.col-3-rm{
+    width: 140px;
+}
+.col-4-rm{
+    width: 50px;
+}
+
+.top-manage-medicine{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.add-manage-medicine{
+    padding: 10px 20px;
+    height: fit-content;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: #255674;
+    color: white;
     &:hover{
         background-color: #2c98dc;
     }
