--- a/frontend/src/pages/Stock/stock.css
+++ b/frontend/src/pages/Stock/stock.css
@@ -9,7 +9,7 @@
 }
 
 .stock-page-searchBox{
-    width: 40%;
+    width: fit-content;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     padding: 20px;
     background-color: white;
