Added Manage Staff page

--- a/frontend/src/components/Report/reportModal.css
+++ b/frontend/src/components/Report/reportModal.css
@@ -109,6 +109,8 @@
 .edit-icon{
     color: #255674;
     cursor: pointer;
+    display: flex;
+    align-items: center;
     &:hover{
         color: rgb(227, 227, 11);
     }
